// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item should render 1`] = `
<div>
  <li
    class="list-group-item"
  />
</div>
`;

exports[`Item should render as active 1`] = `
<div>
  <li
    class="active list-group-item"
  />
</div>
`;
